fix: header search bar alignment

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -209,7 +209,7 @@ hr {
 
   .searchBarContainer {
     position: absolute;
-    top: 22px;
+    top: 16px;
     left: 350px;
     width: 25%;
   }
